--- a/src/pages/arrangement-add/index.wxml
+++ b/src/pages/arrangement-add/index.wxml
@@ -9,20 +9,21 @@
         </i-cell>
     </picker>
     <picker bindchange="hospitalChange" range-key="name" value="{{props.store.hospitalIndex}}" range="{{props.store.hospitals}}">
-        <i-cell is-link value="{{props.store.hospitals[props.store.hospitalIndex].name}}">
+        <i-cell is-link value="{{props.store.hospitalIndex == -1?'请选择':props.store.hospitals[props.store.hospitalIndex].name}}">
             <view class="picker">
                 选择门店
             </view>
         </i-cell>
     </picker>
-    <picker bindchange="doctorChange" range-key="name" value="{{props.store.doctorIndex}}" range="{{props.store.doctors}}">
-        <i-cell is-link value="{{props.store.doctors[props.store.doctorIndex].name}}">
+    <picker bindchange="doctorChange" range-key="realName" value="{{props.store.doctorIndex}}" range="{{props.store.doctors}}">
+        <i-cell is-link value="{{props.store.doctorIndex == -1?'请选择':props.store.doctors[props.store.doctorIndex].realName}}">
             <view class="picker">
                 选择医师
             </view>
         </i-cell>
     </picker>
     <i-cell title="选择出诊时间" bind:click="showVisitTime" value="{{props.store.visitTimeLabel}}" is-link></i-cell>
+    <i-input type="textarea" title="描述" bind:change="descriptionChange" value="{{props.store.description}}" placeholder="排班描述(最多100字)"></i-input>
   </i-cell-group>
   <i-button bind:click="submit" type="primary" size="default">提交</i-button>
   <i-action-sheet visible="{{ props.store.visitTimeShow }}" actions="{{ [{name:'上午'},{name:'下午'}] }}" show-cancel bind:cancel="cancelVisitTime" bind:click="handleVisitTime">
