--- a/src/app.scss
+++ b/src/app.scss
@@ -1,12 +1,124 @@
 
 $padding: 200rpx;
+$color-primary: #2d8cf0;
 
 .container {
-	// height: 100vh;
-	// display: flex;
-	// flex-direction: column;
-	// justify-content: space-between;
-	// box-sizing: border-box;
+	&.has-footer{
+		margin-bottom: 50px;
+	}
+	.footer {
+		background-color: #fff;
+		border-top: 1px solid #ddd;
+		padding: 5px;
+		z-index: 1;
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
+}
+
+
+.form {
+	padding: 20px;
+}
+
+.input-group {
+	border-top:1px solid #ddd;
+	border-bottom:1px solid #ddd;
+	.input-wrapper {
+		position: relative;
+		display:flex;
+		align-items:flex-start;
+		padding: 7px 15px;
+		background-color:#fff;
+		.input-label{
+			width: 75px;
+			height: 30px;
+			line-height: 30px;
+		}
+		input, textarea {
+			flex:1;
+			margin-left:5px;
+			padding: 4px 0;
+			box-sizing: border-box;
+		}
+		input {
+			height: 30px;
+			line-height: 30px;
+		}
+		textarea {
+			height: 80px;
+		}
+		
+		&:after{
+			content: '';
+			position: absolute;
+			border-top: 1rpx solid #eee;
+			bottom: 0;
+			right: 0;
+			left: 15px;
+		}
+	}
+}
+
+.c-select {
+  position: relative;
+}
+.c-select:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200%;
+  height: 200%;
+  transform: scale(0.5);
+  transform-origin: 0 0;
+  pointer-events: none;
+  box-sizing: border-box;
+  border: 0 solid #e9eaec;
+  border-bottom-width: 1px;
+  left: 15px;
+  right: 0;
+}
+
+.pic-list {
+	.pic-item{
+		display: inline-block;
+		vertical-align: top;
+		margin: 5px;
+		width: 60px;
+		height: 60px;
+		image {
+			width: 60px;
+			height: 60px;
+		}
+	}
+	.pic-add{
+		text-align: center;
+		line-height: 60px;
+		border: 1px solid #dddee1;
+	}
+}
+
+.list-item{
+	display: flex;
+	align-items: flex-start;
+	flex-direction: row;
+	.item-content{
+		margin: 0 5px;
+		.item-tags{
+			margin-right: 5px;
+		}
+	}
+}
+
+.container-flex {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	box-sizing: border-box;
 }
 
 page {
@@ -15,6 +127,35 @@ page {
 	color: #333333;
 }
 
+.btn {
+	text-align:center;
+	vertical-align:middle;
+	touch-action:manipulation;
+	cursor:pointer;
+	background-image:none;
+	white-space:nowrap;
+	user-select:none;
+	font-size:14px;
+	border-radius:2px;
+	border:0 !important;
+	position:relative;
+	text-decoration:none;
+	height:44px;
+	line-height:44px;
+	box-shadow:inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+	color:#fff;
+	// background:#f7f7f7 !important;
+	// color:#495060 !important;
+	// margin:10px;
+
+}
+.btn-primary {
+	background-color: $color-primary;
+	color: #fff;
+	&.button-hover{
+		background-color: darken($color-primary, 5%);
+	}
+}
 
 .clr-warning{
 	color: #ff9900;
@@ -24,12 +165,23 @@ page {
 	color: #80848f;
 }
 
+.clr-light-primary {
+	color: #5cadff;
+}
+.text-right{
+	text-align: right;
+}
+
 .fs-small{
 	font-size: 12px;
 }
 
 .fs-normal{
 	font-size: 14px;
+}
+
+.fs-large {
+	font-size: 18px;
 }
 
 .txt-center {
@@ -54,6 +206,9 @@ page {
 
 .whitespace{
 	height: 10px;
+}
+.footerspace{
+	height: 30px;
 }
 
 .tabbar{
