--- a/src/app.scss
+++ b/src/app.scss
@@ -2,6 +2,7 @@
 $padding: 200rpx;
 $color-primary: #2d8cf0;
 $color-sub: #80848f;
+$color-danger: #ed3f14;
 
 .help-text {
 	text-align: center;
@@ -14,6 +15,9 @@ $color-sub: #80848f;
 		margin-bottom: 50px;
 	}
 	.footer {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
 		background-color: #fff;
 		border-top: 1px solid #ddd;
 		padding: 5px;
@@ -22,6 +26,13 @@ $color-sub: #80848f;
 		bottom: 0;
 		left: 0;
 		right: 0;
+		>button {
+			flex:1;
+			margin-right: 5px;
+			&:last-child{
+				margin-right: 0;
+			}
+		}
 	}
 }
 
@@ -161,6 +172,13 @@ page {
 	color: #fff;
 	&.button-hover{
 		background-color: darken($color-primary, 5%);
+	}
+}
+.btn-danger {
+	background-color: $color-danger;
+	color: #fff;
+	&.button-hover{
+		background-color: darken($color-danger, 5%);
 	}
 }
 
