--- a/src/pages/arrangement-add/index.wxml
+++ b/src/pages/arrangement-add/index.wxml
@@ -1,3 +1,14 @@
+<wxs module="tools">
+var getDepartmentTip = function(selectedDepartment){
+    if (!selectedDepartment) {
+        return '';
+    }
+    return selectedDepartment.department1.name + '-' + selectedDepartment.department2.name;
+};
+module.exports = {
+    getDepartmentTip: getDepartmentTip
+};
+</wxs>
 <view class="container">
   <view class="whitespace"></view>
   <i-cell-group>
@@ -11,12 +22,13 @@
     <picker bindchange="hospitalChange" range-key="name" value="{{props.store.hospitalIndex}}" range="{{props.store.hospitals}}">
         <i-cell is-link value="{{props.store.hospitalIndex == -1?'请选择':props.store.hospitals[props.store.hospitalIndex].name}}">
             <view class="picker">
-                选择门店
+                选择医院
             </view>
         </i-cell>
     </picker>
-    <picker bindchange="doctorChange" range-key="realName" value="{{props.store.doctorIndex}}" range="{{props.store.doctors}}">
-        <i-cell is-link value="{{props.store.doctorIndex == -1?'请选择':props.store.doctors[props.store.doctorIndex].realName}}">
+    <i-cell title="选择科室" bind:click="selectDepartment" is-link value="{{tools.getDepartmentTip(props.store.selectedDepartment)}}"></i-cell>
+    <picker bindchange="doctorChange" range-key="realName" value="{{props.store.doctorIndex}}" range="{{props.store.selectedDepartment.department2.doctors}}">
+        <i-cell is-link value="{{props.store.doctorIndex == -1?'请选择':props.store.selectedDepartment.department2.doctors[props.store.doctorIndex].realName}}">
             <view class="picker">
                 选择医师
             </view>
@@ -26,7 +38,7 @@
     <i-input title="挂号费" type="number" bind:change="feeChange" value="{{props.store.fee}}" placeholder="输入挂号费"></i-input>
     <i-input type="textarea" title="描述" bind:change="descriptionChange" value="{{props.store.description}}" placeholder="排班描述(最多100字)"></i-input>
   </i-cell-group>
-  <i-button bind:click="submit" type="primary" size="default">提交</i-button>
+  <button bindtap="submit" style="margin: 10px;" class="btn btn-primary">提交</button>
   <i-action-sheet visible="{{ props.store.visitTimeShow }}" actions="{{ [{name:'上午'},{name:'下午'}] }}" show-cancel bind:cancel="cancelVisitTime" bind:click="handleVisitTime">
   </i-action-sheet>
 </view>
