--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -25,7 +25,7 @@
         <i-grid-icon i-class="funcs-item-icon">
             <image src="../../images/face.png" />
         </i-grid-icon>
-        <i-grid-label>门店管理</i-grid-label>
+        <i-grid-label>医院管理</i-grid-label>
       </i-grid-item>
     </i-row>
   </i-grid>
