--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,7 @@ $padding: 200rpx;
 $color-primary: #2d8cf0;
 $color-sub: #80848f;
 $color-danger: #ed3f14;
+$color-success: #19be6b;
 
 .help-text {
 	text-align: center;
@@ -179,6 +180,13 @@ page {
 	color: #fff;
 	&.button-hover{
 		background-color: darken($color-danger, 5%);
+	}
+}
+.btn-success {
+	background-color: $color-success;
+	color: #fff;
+	&.button-hover{
+		background-color: darken($color-success, 5%);
 	}
 }
 
