--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -5,9 +5,12 @@
 	background-color: #ffffff;
 }
 .funcs-item-icon {
-	width: 50px !important;
-	height: 50px !important;
+	width: 36px !important;
+	height: 40px !important;
 }
 .null-item{
 	border: 0 !important;
+}
+.label {
+	color: #0089ef;
 }
