--- a/src/pages/hospitals/index.wxml
+++ b/src/pages/hospitals/index.wxml
@@ -5,13 +5,13 @@
         </view>
         <i-cell wx:key="id" wx:for="{{props.store.hospitals}}" is-link url="{{item.link}}">
             <view class="list-item">
-                <image src="http://via.placeholder.com/50x50" style="width:50px;height:50px;min-width:50px;"/>
+                <!-- <image src="http://via.placeholder.com/50x50" style="width:50px;height:50px;min-width:50px;"/> -->
                 <view class="item-content">
                     <text>{{item.name}}</text>
                     <view class="clr-sub fs-small">{{item.address}}</view>
                     <view>
-                        <text class="item-tags clr-warning fs-small">{{item.tags}}</text>
-                        <text class="item-tags clr-sub fs-small">预约量 {{item.reg_count}}</text>
+                        <text class="item-tags clr-sub fs-small">{{item.phone}}</text>
+                        <!-- <text class="item-tags clr-sub fs-small">预约量 {{item.reg_count}}</text> -->
                     </view>
                 </view>
             </view>
