--- a/src/styles/_cell.scss
+++ b/src/styles/_cell.scss
@@ -1,3 +1,45 @@
+
+.list {
+  position: relative;
+  background-color: #fff;
+  &::after{
+    content:' ';
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    // border:0 solid blue;//#e9eaec;
+    // border-bottom-width:.5rpx;
+    border-bottom: 1px solid #e9eaec;
+    border-top: 1px solid #e9eaec;
+    pointer-events:none;
+    box-sizing:border-box;
+    width:200%;
+    height:200%;
+    transform:scale(.5);
+    transform-origin:0 0;
+  }
+  .list-title{
+    padding: 5px 15px;
+    position: relative;
+    &::after{
+      content:' ';
+      position:absolute;
+      top:0;
+      left:0;
+      right:0;
+      // border:0 solid blue;//#e9eaec;
+      // border-bottom-width:.5rpx;
+      border-bottom: 1px solid #e9eaec;
+      pointer-events:none;
+      box-sizing:border-box;
+      width:200%;
+      height:200%;
+      transform:scale(.5);
+      transform-origin:0 0;
+    }
+  }
+}
 .cell{
   position:relative;
   padding:12px 15px;
